--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.0"
+    "express-session": "^1.17.0",
+    "nodemon": "^2.0.2"
   },
   "description": ""
 }
