--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "mongodb": "^3.5.5",
+    "monk": "^7.1.2",
     "nodemon": "^2.0.2"
   },
   "description": ""
